--- a/lightbox.links.task.yml
+++ b/lightbox.links.task.yml
@@ -1,22 +1,22 @@
 # Lightbox routing definition
 entity.lightbox.canonical:
-  route_name: entity.lightbox.canonical
-  base_route: entity.lightbox.canonical
+  route_name: entity.modal.canonical
+  base_route: entity.modal.canonical
   title: 'View'
 
 entity.lightbox.edit_form:
-  route_name: entity.lightbox.edit_form
-  base_route: entity.lightbox.canonical
+  route_name: entity.modal.edit_form
+  base_route: entity.modal.canonical
   title: 'Edit'
 
 entity.lightbox.version_history:
-  route_name: entity.lightbox.version_history
-  base_route: entity.lightbox.canonical
+  route_name: entity.modal.version_history
+  base_route: entity.modal.canonical
   title: 'Revisions'
 
 entity.lightbox.delete_form:
-  route_name:  entity.lightbox.delete_form
-  base_route:  entity.lightbox.canonical
+  route_name:  entity.modal.delete_form
+  base_route:  entity.modal.canonical
   title: Delete
   weight: 10
 
