--- a/lightbox.permissions.yml
+++ b/lightbox.permissions.yml
@@ -1,36 +1,36 @@
 add lightbox entities:
-  title: 'Create new Lightbox entities'
+  title: 'Create new Modal entities'
 
 administer lightbox entities:
-  title: 'Administer Lightbox entities'
-  description: 'Allow to access the administration form to configure Lightbox entities.'
+  title: 'Administer Modal entities'
+  description: 'Allow to access the administration form to configure Modal entities.'
   restrict access: true
 
 delete lightbox entities:
-  title: 'Delete Lightbox entities'
+  title: 'Delete Modal entities'
 
 edit lightbox entities:
-  title: 'Edit Lightbox entities'
+  title: 'Edit Modal entities'
 
 access lightbox overview:
-  title: 'Access the Lightbox overview page'
+  title: 'Access the Modal overview page'
 
 view published lightbox entities:
-  title: 'View published Lightbox entities'
+  title: 'View published Modal entities'
 
 view unpublished lightbox entities:
-  title: 'View unpublished Lightbox entities'
+  title: 'View unpublished Modal entities'
 
 view all lightbox revisions:
-  title: 'View all Lightbox revisions'
+  title: 'View all Modal revisions'
 
 revert all lightbox revisions:
-  title: 'Revert all Lightbox revisions'
-  description: 'Role requires permission <em>view Lightbox revisions</em> and <em>edit rights</em> for lightbox entities in question or <em>administer lightbox entities</em>.'
+  title: 'Revert all Modal revisions'
+  description: 'Role requires permission <em>view Modal revisions</em> and <em>edit rights</em> for modal entities in question or <em>administer modal entities</em>.'
 
 delete all lightbox revisions:
   title: 'Delete all revisions'
-  description: 'Role requires permission to <em>view Lightbox revisions</em> and <em>delete rights</em> for lightbox entities in question or <em>administer lightbox entities</em>.'
+  description: 'Role requires permission to <em>view Modal revisions</em> and <em>delete rights</em> for modal entities in question or <em>administer modal entities</em>.'
 
 access content:
   title: 'Access Content'
