--- a/modal.permissions.yml
+++ b/modal.permissions.yml
@@ -1,34 +1,34 @@
-add lightbox entities:
+add modal entities:
   title: 'Create new Modal entities'
 
-administer lightbox entities:
+administer modal entities:
   title: 'Administer Modal entities'
   description: 'Allow to access the administration form to configure Modal entities.'
   restrict access: true
 
-delete lightbox entities:
+delete modal entities:
   title: 'Delete Modal entities'
 
-edit lightbox entities:
+edit modal entities:
   title: 'Edit Modal entities'
 
-access lightbox overview:
+access modal overview:
   title: 'Access the Modal overview page'
 
-view published lightbox entities:
+view published modal entities:
   title: 'View published Modal entities'
 
-view unpublished lightbox entities:
+view unpublished modal entities:
   title: 'View unpublished Modal entities'
 
-view all lightbox revisions:
+view all modal revisions:
   title: 'View all Modal revisions'
 
-revert all lightbox revisions:
+revert all modal revisions:
   title: 'Revert all Modal revisions'
   description: 'Role requires permission <em>view Modal revisions</em> and <em>edit rights</em> for modal entities in question or <em>administer modal entities</em>.'
 
-delete all lightbox revisions:
+delete all modal revisions:
   title: 'Delete all revisions'
   description: 'Role requires permission to <em>view Modal revisions</em> and <em>delete rights</em> for modal entities in question or <em>administer modal entities</em>.'
 
