--- a/modal.info.yml
+++ b/modal.info.yml
@@ -1,6 +1,6 @@
 name: Modal
 description: A modal which can be customized
-package: WithPulp
+package: PreamTot
 type: module
 version: 1.0
 core: 8.x
